# fakechecker

./: .gitignore  pyproject.toml
app/: config.py  main.py
app/config/: messages.yaml
app/factcheck/: extractor.py  factcheck.py
app/factcheck/tools/: search.py
app/handlers/: __init__.py  messages.py
app/utils/: __init__.py  crawling.py  message_utils.py  smart_session.py
app/web_handlers/: tg_updates.py
